src/opt/tests/snapshots/dce__basic_bail.snap
---
created: "2019-04-04T19:26:26.184469800Z"
creator: insta@0.7.1
source: src/opt/tests/dce.rs
expression: "\n    x;\n    const foo;\n    foo.bar;\n    delete foo.bar;\n    foo();\n    (function* baz() {\n        yield;\n    })();\n    (async function baz2() {\n        await 1;\n    })();\n"
---
<dead> = <global x>
_ini = <void>
foo <= _ini
_obj = *foo
_prp = "bar"
<dead> = _obj[_prp]
_obj$1 = *foo
_prp$1 = "bar"
<dead> = <delete> _obj$1[_prp$1]
_fun = *foo
<dead> = _fun()
_fun$1 = <function generator>:
    _yld = <void>
    <dead> = <yield> _yld
<dead> = _fun$1()
_fun$2 = <function async>:
    _awa = 1
    <dead> = <await> _awa
<dead> = _fun$2()
