src/opt/tests/snapshots/dce__dont_drop_after_switch_break.snap
---
created: "2019-04-06T00:15:57.502064300Z"
creator: insta@0.7.1
source: src/opt/tests/dce.rs
expression: "\n    switch (x) {\n        case 1:\n            break;\n        case 2:\n            log();\n    }\n"
---
_swi = <global x>
_tst = 1
_tst$1 = 2
<switch> _swi:
    <case> _tst:
    <break>
    <case> _tst$1:
    _fun = <global log>
    <dead> = _fun()
