src/opt/tests/snapshots/dce__drop_after_jumps_1.snap
---
created: "2019-04-01T02:57:49.792212400Z"
creator: insta@0.7.1
source: src/opt/tests/dce.rs
expression: "\n    (function() {\n        good;\n        if (x) {\n            good;\n            throw 1;\n            bad;\n        }\n        good;\n        return 2;\n        bad;\n    })();\n"
---
_fun = <function>:
    <dead> = <global good>
    _iff = <global x>
    <if> _iff:
        <dead> = <global good>
        _thr = 1
        <throw> _thr
    <else>:
        <empty>
    <dead> = <global good>
    _ret = 2
    <return> _ret
<dead> = _fun()
