src/opt/tests/snapshots/dce__drop_after_jumps_2.snap
---
created: "2019-04-01T02:57:49.792212400Z"
creator: insta@0.7.1
source: src/opt/tests/dce.rs
expression: "\n    for (;;) {\n        good;\n        if (x) {\n            good;\n            continue;\n            bad;\n        }\n        good;\n        if (y) {\n            good;\n            break;\n            bad;\n        }\n        good;\n    }\n"
---
<loop>:
    <dead> = <global good>
    _iff = <global x>
    <if> _iff:
        <dead> = <global good>
        <continue>
    <else>:
        <empty>
    <dead> = <global good>
    _iff$1 = <global y>
    <if> _iff$1:
        <dead> = <global good>
        <break>
    <else>:
        <empty>
    <dead> = <global good>
