src/opt/tests/snapshots/dce__nested_effects.snap
---
created: "2019-03-30T06:14:40.388860600Z"
creator: insta@0.7.1
source: src/opt/tests/dce.rs
expression: "\n    [{ x: call() }];\n"
---
<dead> = <global x>
_fun = <global call>
<dead> = _fun()
